@@ -1,5 +1,6 @@
 Version 1.0.0
     * Added German translation
+    * Handle 'failed connection' error
 
 Version 0.1.1
     * Fixed Bug: Only the first package was listed
